[tool.poetry]
name = "oia-default-answer"
version = "0.1.0"
description = ""
authors = ["momonong <morrischen2.9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.68.2"
gspread = "^6.2.0"
google-auth = "^2.38.0"
python-dotenv = "^1.1.0"
oauth2client = "^4.1.3"
azure-identity = "^1.21.0"
rapidfuzz = "^3.12.2"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
